--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  min-height:100vh;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-image: linear-gradient(79deg,#a8bdd5, #6569d4, #98a8df);
+}
+.login-form{
+  padding: 4rem;
+  display:flex;
+  flex-direction:column;
+}
+.register-form{
+  padding: 2rem;
+  display:flex;
+  flex-direction:column;
+}
+.auth-form-container{
+  padding: 5rem;
+  border: 1px solid white;
+  border-radius: 10px;
+  margin: 0.5rem;
+  background-color: rgba(187, 21, 21, 0.01);
+}
+input::placeholder {
+  text-align: center; 
+}
+label {
+  text-align: left;
+  padding: 0.25rem 0;
+  color: rgb(13, 1, 32);
+  font-family: 'Roboto'; 
+}
+input {
+  margin: 0.5rem 0;
+  padding: 1rem 0;
+  border-color: none;
+  border-radius: 9px;
+}
+/*the button for input (white box) */
+button{
+  border:black;
+  background-color: rgb(255, 255, 255);
+  width: 300px;
+  padding: 6px;
+  border-radius: 10px;
+  cursor:pointer;
+}
+.link-btn{
+  padding:20px;
+  background: none;
+  color: black;
+  text-decoration: underline;
+}
+.navbar {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 200px;
+  background-color:linear-gradient(79deg,#a8bdd5, #6569d4, #98a8df); 
+  padding: 20px;
+  height: 100vh; 
+  position: fixed; 
+  top: 0;
+  left: 0;
+  z-index: 1000; 
+}
+.navbar-menu li {
+  margin-bottom: 20px;
+}
+/*the words displayed*/
+.navbar-menu a {
+  text-decoration: underline;
+  color: #333;
+}
+/*when we click on the link in navbar*/
+.navbar-menu a:hover {
+  color: rgb(24, 23, 47);
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
